change neutron config

--- a/openstack/neutron/files/config/neutron.conf
+++ b/openstack/neutron/files/config/neutron.conf
@@ -310,7 +310,7 @@ nova_url = {{NOVA_URL}}
 # Username for connection to nova in admin context
 nova_admin_username = {{NOVA_ADMIN_USER}}
 # The uuid of the admin nova tenant
-nova_admin_tenant_id = {{NOVA_ADMIN_TENANT_ID}}
+nova_admin_tenant_id = fb928ed86b8142fc9c62e7e2f87e7b99
 
 # Password for connection to nova in admin context.
 nova_admin_password = {{NOVA_ADMIN_PASS}}
