--- a/openstack/nova/files/config/nova.conf
+++ b/openstack/nova/files/config/nova.conf
@@ -2822,7 +2822,7 @@ admin_tenant_name={{AUTH_NOVA_ADMIN_TENANT}}
 # Libvirt domain type (valid options are: kvm, lxc, qemu, uml,
 # xen) (string value)
 # Deprecated group;name - DEFAULT;libvirt_type
-virt_type=qemu
+virt_type=kvm
 
 # Override the default libvirt URI (which is dependent on
 # virt_type) (string value)
