--- a/openstack/neutron/files/config/plugins/linuxbridge/linuxbridge_conf.ini
+++ b/openstack/neutron/files/config/plugins/linuxbridge/linuxbridge_conf.ini
@@ -28,7 +28,7 @@ network_vlan_ranges =  physnet1
 # networks listed in network_vlan_ranges on the server should have
 # mappings to appropriate interfaces on each agent.
 #
-physical_interface_mappings = physnet1:eth0
+physical_interface_mappings = physnet1:em1
 # Example: physical_interface_mappings = physnet1:eth1
 
 [vxlan]
